[Linux] Backport PipeWire DBus upstream fixes
Categories
(Core :: WebRTC, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox84 | --- | fixed |
People
(Reporter: stransky, Assigned: stransky)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
Backport some PipeWire upstream DBus fixes.
Assignee | ||
Comment 1•5 years ago
|
||
Author: Michael Olbrich <m.olbrich@pengutronix.de>
pipewire: handle deleting the capturer while a D-Bus call is in progress
If a D-Bus call is in progress when a BaseCapturerPipeWire is deleted, then
the user_data is invalid when the callback function is called. This results
in memory corruption.
To fix this, use a GCancellable. If it is canceled, the callback will be
called with a corresponding error. Detect this error and abort before
accessing the user_data.
Note: The first argument is the 'source_object'. For g_dbus_proxy_call()
this is the proxy object not the connection. This was not a problem before,
because it was not used.
Reviewed-on: https://webrtc-review.googlesource.com/c/src/+/149817
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Commit-Queue: Jamie Walch <jamiewalch@chromium.org>
Assignee | ||
Comment 2•5 years ago
|
||
Avoid g_clear_object in pipewire, fixes the build warnings when building with a newer version of
glib.
Depends on D96677
Comment 4•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/7ba4077f7dbc
https://hg.mozilla.org/mozilla-central/rev/3648ab7c7776
Description
•