third_party/libwebrtc/webrtc/modules/desktop_capture/linux/base_capturer_pipewire.h
@@ -70,6 +70,7 @@ class BaseCapturerPipeWire : public DesktopCapturer {
 
   GDBusConnection* connection_ = nullptr;
   GDBusProxy* proxy_ = nullptr;
+  GCancellable *cancellable_ = nullptr;
   gchar* portal_handle_ = nullptr;
   gchar* session_handle_ = nullptr;
   gchar* sources_handle_ = nullptr;
@@ -122,7 +123,7 @@ class BaseCapturerPipeWire : public DesktopCapturer {
                                     const gchar* token);
 
   void SessionRequest();
-  static void OnSessionRequested(GDBusConnection* connection,
+  static void OnSessionRequested(GDBusProxy *proxy,
                                  GAsyncResult* result,
                                  gpointer user_data);
   static void OnSessionRequestResponseSignal(GDBusConnection* connection,
@@ -134,7 +135,7 @@ class BaseCapturerPipeWire : public DesktopCapturer {
                                              gpointer user_data);
 
   void SourcesRequest();
-  static void OnSourcesRequested(GDBusConnection* connection,
+  static void OnSourcesRequested(GDBusProxy *proxy,
                                  GAsyncResult* result,
                                  gpointer user_data);
   static void OnSourcesRequestResponseSignal(GDBusConnection* connection,
@@ -146,7 +147,7 @@ class BaseCapturerPipeWire : public DesktopCapturer {
                                              gpointer user_data);
 
   void StartRequest();
-  static void OnStartRequested(GDBusConnection* connection,
+  static void OnStartRequested(GDBusProxy *proxy,
                                GAsyncResult* result,
                                gpointer user_data);
   static void OnStartRequestResponseSignal(GDBusConnection* connection,
@@ -158,7 +159,7 @@ class BaseCapturerPipeWire : public DesktopCapturer {
                                            gpointer user_data);
 
   void OpenPipeWireRemote();
-  static void OnOpenPipeWireRemoteRequested(GDBusConnection* connection,
+  static void OnOpenPipeWireRemoteRequested(GDBusProxy *proxy,
                                             GAsyncResult* result,
                                             gpointer user_data);
 
